--- a/accounts/templates/page1/profile.html
+++ b/accounts/templates/page1/profile.html
@@ -3,20 +3,40 @@
 
 {% block content %}
 
+<div class="user-informations " style="margin-top:100px;">
+  
+  <div class="container m-auto border p-3">
+    <h5 class="text-center p-3 border-bottom">My Informations</h5>
+    <h6> <span class="font-weight-bold">Id</span> : {{request.user.id}} </h6>
+    <h5> Name : {{request.user.first_name}} {{request.user.last_name}}</h5>
+    <b>Balance : {{request.user.useraccount.balance}}</b> <br>
+    <strong>Email : {{request.user.email}}</strong><br><br>
+
+
+    <a href="{% url 'update' %}" class="btn btn-danger" >Update Information</a>
+  </div>
+</div>
+
+
+
+
  <br>
  <br>
  <br>
  <br>
-<table class="table border">
-    <thead>
+
+
+<table class="table border mb-5 p-5 container " border="1">
+  <h1 class="border-bottom text-center mb-2 pb-3">Buyed books list</h1>
+    <thead >
       <tr>
-        <th scope="col">ID</th>
+        <th scope="col ">ID</th>
         <th scope="col">Book Title</th>
         <th scope="col">Price</th>
         <th scope="col">Date</th>
         <th scope="col">amount</th>
 
-        <th scope="col">Return book</th>
+        {% comment %} <th scope="col">Return book</th> {% endcomment %}
         <th scope="col">Review book</th>
       </tr>
     </thead>
@@ -29,7 +49,7 @@
         <td>{{dt.borrow_date}}</td>
         <td>{{request.user.useraccount.balance}}</td>
 
-        <td><a href="{% url 'return_book' dt.id%}" class="btn btn-sm mb-2 btn-danger">Return Book</a> </td>
+        {% comment %} <td><a href="{% url 'return_book' dt.id%}" class="btn btn-sm mb-2 btn-danger">Return Book</a> </td> {% endcomment %}
         <td><a href="{% url 'review' dt.id %}" class="btn btn-sm mb-2 btn-danger">Review Book</a> </td>
 
       </tr>
