--- a/accounts/templates/page1/review.html
+++ b/accounts/templates/page1/review.html
@@ -1,23 +1,24 @@
+
+
 {% extends "base.html" %}
-
-{% block content %}
-
-
 {% load crispy_forms_tags %}
-
-
- <div  class="card  p-2">
-  <div class="card-body">
-      <div style="width:80%; margin:auto;">
-          <h3>This is Review section: </h3>
-      <hr>
-          <form  method="post" >
-              {% csrf_token %}
-              {{ review_form|crispy }}
-              <button type="submit" class="btn btn-danger">submit</button>
-            </form>
-          </div>
-  </div>
-</div> 
-
-{% endblock content %}
+{%block content%}
+<div class="mt-5">
+    <div style="width:50%; background:#EEF5FF; margin:auto; padding:50px;">
+        <h1 class="text-center font-weight-bold" style='color:purple; '>This is Review section: </h1>
+    <form  method="post" class="uniForm" novalidate>
+      {% csrf_token %}
+      {% if review_form.non_field_errors %}
+      {% for er in review_form.non_field_errors %}
+        <p class="bg-danger text-white p-3">{{er}}</p>
+      {% endfor %}
+      {% endif %}
+      <!-- {{review_form | crispy }} -->
+      {% for fm in review_form%} {{fm.label_tag}} {{fm}} {{fm.errors|striptags}} 
+      {% endfor %}
+      <br>
+        <button type="submit" class="btn btn-danger">Review</button>
+      </form>
+    </div>
+</div>
+{% endblock %} 
