--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Librarian</title>
         <meta charset="utf-8" />
         <meta
             name="viewport"
@@ -13,47 +13,100 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <link href="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/css/swiffy-slider.min.css" rel="stylesheet" crossorigin="anonymous">
     </head>
 
-    <body>
+
+    <style>
+
+      .social-icon {
+        text-decoration: none;
+        color: inherit;
+        margin-right: 10px;
+    }
+
+    .social-icon:hover {
+        opacity: 0.8;
+    }
+
+    .list-unstyled {
+        list-style: none;
+        padding: 0;
+    }
+
+    .footer-li {
+        margin-bottom: 5px;
+    }
+    {% comment %} footer{
+      background: linear-gradient(90deg,#540654,#cc0d85 50%,#540654 100%,#00d4ff 0);
+    } {% endcomment %}
+
+      body{
+        font-family: 'Montserrat', sans-serif;
+        font-family: 'Roboto', sans-serif;
+      }
+
+      footer {
+        margin-top: auto;
+      }
+  
+      .footer-li {
+        list-style-type: none;
+      }
+  
+      .footer-li a {
+        text-decoration: none; 
+        color: inherit;
+      }
+  nav{
+    {% comment %} background: linear-gradient(90deg,#540654,#cc0d85 50%,#540654 100%,#00d4ff 0); {% endcomment %}
+    {% comment %} background: #000; {% endcomment %}
+  }
+  .bg-color{
+    background: linear-gradient(90deg,#540654,#cc0d85 50%,#540654 100%,#00d4ff 0);
+  }
+      
+    </style>
+
+    <body style="background:#F1F2F4;">
 
 
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
+        <nav class="navbar fixed-top navbar-expand-lg bg-danger ">
+            <div class="container">
+              <a class="navbar-brand text-light" href="#">Librarian</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link " href="{% url 'homepage' %}">Home</a>
+                    <a class="nav-link text-light " href="{% url 'homepage' %}">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'deposit' %}">Deposit</a>
+                    <a class="nav-link text-light" href="{% url 'deposit' %}">Deposit</a>
                   </li>
                 </ul>
 
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item me-5">
-                    <h2 class="nav-link active"> hello ! Your Total Amount : {{ request.user.useraccount.balance }} </h2>
+                    <h2 class="nav-link active text-light"> hello ! Your Total Amount : {{ request.user.useraccount.balance }} </h2>
                   </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'profile' %}">profile</a>
+                        <a class="nav-link text-light active" aria-current="page" href="{% url 'profile' %}">profile</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="{% url 'logout' %}">logout</a>
+                        <a class="nav-link text-light" href="{% url 'logout' %}">logout</a>
                       </li>
                     
                     {% else %}
 
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="{% url 'login' %}">Login</a>
+                      <a class="nav-link text-light active" aria-current="page" href="{% url 'login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="{% url 'register' %}">Signup</a>
+                      <a class="nav-link text-light" href="{% url 'register' %}">Signup</a>
                     </li>
                     {%endif%}
                   </ul>
@@ -76,12 +129,84 @@
         {% endblock content %}
 
 
+        <footer class="mt-5 mb-0 pt-5 pb-2 text-light bg-danger" >
+          <div class="container w-75 m-auto row">
+              <hr>
+              <div class="col-md-6">
+                {% comment %} <img class="icon" width="90px" src="{% static 'logos.png'%}" alt="logo" /> {% endcomment %}
+                <hr>
+                  {% comment %} <h3 style='font-size:20px; font-weight:bold; color:white;'>Follow Us</h3> {% endcomment %}
+                  <div class="icons mt-3">
+                    <h3 style='font-size:20px; font-weight:bold; color:white;'>Follow Us</h3>
+                      {% comment %} <a href="#" class="social-icon"><img class="icon" width="30px" src="{% static 'facebook1.png'%}" alt="Facebook" /></a>
+                      <a href="#" class="social-icon"><img class="icon" width="30px" src="{% static 'linkedin1.png'%}" alt="LinkedIn" /></a>
+                      <a href="#" class="social-icon"><img class="icon" width="30px" src="{% static 'twitter1.png'%}" alt="Twitter" /></a>
+                      <a href="#" class="social-icon"><img class="icon" width="30px" src="{% static 'instagram1.png'%}" alt="Instagram" /></a> {% endcomment %}
+                  </div>
+                  <p class="pe-5 pb-5 pt-5">Tuition is a fee paid for instruction or teaching, usually for higher education. Many students need to get part-time jobs to pay their college tuition.</p>
+              </div>
+              <div class="col-md-2 mb-3">
+                  <h3 style='font-size:20px; font-weight:bold ;color:white;'>Types</h3>
+                  <ul class="list-unstyled" >
+                      <li class="footer-li">Story</li>
+                      <li class="footer-li">Programming</li>
+                      <li class="footer-li">Others</li>
+        
+                  </ul>
+                  <h3 style='font-size:20px; font-weight:bold; color:white;margin-top:30px;'>Services</h3>
+                  <ul class="list-unstyled">
+                     
+                      <li class="footer-li">Terms and Conditions</li>
+                      <li class="footer-li">Privecy Policy</li>
+                     
+                  </ul>
+              </div>
+              <div class="col-md-2 mb-3">
+                  <h3 style='font-size:20px; font-weight:bold; color:white;'>Support</h3>
+                  <ul class="list-unstyled">
+                      <li class="footer-li">Get Started</li>
+                      <li class="footer-li"><a class="nav-link text-light" href="">Contact Us</a></li>
+                      <li class="footer-li"><a class="nav-link text-light" href="">About Us</a></li>
+                      <li class="footer-li">Blog</li>
+                  </ul>
+                  <h3 style='font-size:20px; font-weight:bold; color:white; margin-top:30px;'>Company</h3>
+                  <ul class="list-unstyled">
+                     
+                      <li class="footer-li">Terms and Conditions</li>
+                      <li class="footer-li">Privecy Policy</li>
+                     
+                  </ul>
+                  
+              </div>
+              <div class="col-md-2 mb-3">
+                  <h3 style='font-size:20px; font-weight:bold; color:white;'>Products</h3>
+                  <ul class="list-unstyled">
+                     
+                      <li class="footer-li">Web</li>
+                      <li class="footer-li">App</li>
+                      <li class="footer-li">Software</li>
+                  </ul>
+                  
+              </div>
+          </div>
+          <hr />
+          <p class="text-center mt-3">
+              <small>Copyright © 2012 - 2024 TermsFeed®. All rights reserved.</small><br>
+              <small>Designer: Ismail Hossan</small>
+          </p>
+      </footer>
+
+
+
+
+
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
             integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
             crossorigin="anonymous"
         ></script>
+        <script src="https://cdn.jsdelivr.net/npm/swiffy-slider@1.6.0/dist/js/swiffy-slider.min.js" crossorigin="anonymous" defer></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
